--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,10 @@ name = "pypi"
 [dev-packages]
 ipython = "*"
 pytest = "*"
+"flake8" = "*"
+"autopep8" = "*"
+pytest-asyncio = "*"
+coverage = "*"
 
 [requires]
 python_version = "3.6"
